make-a-wish-salesforce/src/objects/Volunteer_Orientation_Training__c.object
<CustomObject>
    <description>It is a junction object for volunteer and Orientation &amp; Training  object. It will capture the volunteer and his completed  training information details</description>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>This field will be used as a hidden field to store account email and used in email template to merg</description>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>It will be used as hidden field to store the volunteer account</description>
        <label>Account Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It will used as a hidden field to store the volunteer account phone</description>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Class_Offering__c</fullName>
        <description>It will hold the training details.</description>
        <label>Class Offering</label>
        <referenceTo>Class_Offering__c</referenceTo>
        <relationshipLabel>Volunteer Orientation &amp; Trainings</relationshipLabel>
        <relationshipName>Volunteer_Orientation_Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>It will display the training completed date.</description>
        <formula>IF(ISPICKVAL( Volunteer_Attendance__c ,&apos;Completed&apos;), TODAY(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <formula>if( ISPICKVAL(Volunteer_Attendance__c,&apos;Cancelled&apos;), TODAY() ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>It will be used to store the orientation and training date</description>
        <formula>Class_Offering__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>It will be used to store the end time of the orientation and training</description>
        <formula>TEXT(Class_Offering__r.End_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Enrollment_Id__c</fullName>
        <description>This Field holds the enroll id from the LMS</description>
        <label>LMS Enrollment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation_Training_Hidden__c</fullName>
        <description>It will display the name of the orientation and training</description>
        <formula>Class_Offering__r.Chapter_Role_O_T__r.Orientation_Training__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orientation &amp; Training Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation_Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will look up to Orientation &amp; Training object records</description>
        <label>Orientation/Training</label>
        <referenceTo>Orientation_Training__c</referenceTo>
        <relationshipLabel>Volunteer Orientation &amp; Trainings</relationshipLabel>
        <relationshipName>Volunteer_Orientation_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <description>It will capture the volunteer  registered date for the orientation or training session</description>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>It will be used to store the start time of the orientation and training</description>
        <formula>TEXT(Class_Offering__r.Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>It will capture information about whether it is a orientation or training</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VolunteerHidden_Email__c</fullName>
        <description>This filed will be used as a hidden field to store the volunteer email</description>
        <label>VolunteerHidden Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Volunteer_Attendance__c</fullName>
        <description>It will capture whether the volunteer registered or completed the session</description>
        <label>Volunteer Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will look up to Volunteer Contact records</description>
        <label>Volunteer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Orientation &amp; Trainings</relationshipLabel>
        <relationshipName>Volunteer_Orientation_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer Orientation &amp; Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer__c</columns>
        <columns>Orientation_Training__c</columns>
        <columns>Registered_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Volunteer_Attendance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VOT-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Orientation &amp; Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_no_available_seats</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISNEW() &amp;&amp; (Orientation_Training__r.Available_Seats__c &lt;= 0)  &amp;&amp; ISPICKVAL(Volunteer_Attendance__c ,&apos;Registered&apos;),( Orientation_Training__r.Available_Seats__c &lt;= 0)&amp;&amp; ISPICKVAL(Volunteer_Attendance__c ,&apos;Registered&apos;) )</errorConditionFormula>
        <errorMessage>There is no available seats for this training</errorMessage>
    </validationRules>
</CustomObject>